# Crust-Engine

./: .gitignore  CMakeLists.txt  Cargo.toml
concept/: CMakeLists.txt
concept/proto/: Event.hpp
concept/src/Controllers/: EventHandler.hpp
concept/src/Logic/: Hitbox.hpp
proto/: CMakeLists.txt  Event.hpp  Testclass.hpp  main.cpp
proto/src/: main.cpp
proto/src/Controllers/: Engine.hpp  EventHandler.hpp  InputHandler.cpp  InputHandler.hpp  Scene.hpp
proto/src/Logic/: Condition.hpp
proto/src/Objects/: Object.cpp  Object.hpp  Texture.cpp
proto/src/Time/: Timer.cpp
src/: Engine.cpp  Engine.hpp  Entity.cpp  Entity.hpp  Event.cpp  Event.hpp  EventHandler.hpp  Hitbox.cpp  Hitbox.hpp  Object.cpp  Object.hpp  Position.cpp  Position.hpp  Scene.cpp  Scene.hpp  Texture.cpp  Texture.hpp  main.cpp  main.rs  sdl.rs  sdl_bindings.rs
src/Controllers/: Engine.cpp  Engine.hpp  EventHandler.hpp  InputHandler.cpp  InputHandler.hpp  Scene.cpp  Scene.hpp
src/Logic/: Action.hpp  Event.hpp  Hitbox.cpp  Hitbox.hpp  Position.cpp
src/Objects/: Entity.cpp  Entity.hpp  Object.cpp  Object.hpp  Texture.cpp  Texture.hpp
src/Time/: Timer.cpp  Timer.hpp
src/sdl/: mod.rs  object.rs  sdl_bindings.rs  texture.rs  window.rs
